unpackaged/main/default/objects/Account/fields/Acceptable_Business_Venture__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Business_Venture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceptable Business Venture</label>
    <type>Checkbox</type>
</CustomField>