unpackaged/main/default/objects/Account/fields/Accepted_Account__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Account__c</fullName>
    <label>Accepted Account</label>
    <length>25</length>
    <type>Text</type>
</CustomField>