unpackaged/main/default/objects/Account/fields/account_complexity__c.field-meta.xml
<CustomField>
    <fullName>account_complexity__c</fullName>
    <label>account complexity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>