unpackaged/main/default/objects/Account/fields/Account_Funding__c.field-meta.xml
<CustomField>
    <fullName>Account_Funding__c</fullName>
    <label>Account Funding</label>
    <length>56</length>
    <type>Text</type>
</CustomField>