unpackaged/main/default/objects/Account/fields/Account_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Account_Hierarchy__c</fullName>
    <label>Account Hierarchy</label>
    <length>25</length>
    <type>Text</type>
</CustomField>