unpackaged/main/default/objects/Account/fields/Account_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Account_Inquiry__c</fullName>
    <label>Account Inquiry</label>
    <length>55</length>
    <type>Text</type>
</CustomField>