unpackaged/main/default/objects/Account/fields/Account_Paid__c.field-meta.xml
<CustomField>
    <fullName>Account_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Paid</label>
    <type>Checkbox</type>
</CustomField>