unpackaged/main/default/objects/Account/fields/Account_Query__c.field-meta.xml
<CustomField>
    <fullName>Account_Query__c</fullName>
    <label>Account Query</label>
    <length>45</length>
    <type>Text</type>
</CustomField>