unpackaged/main/default/objects/Account/fields/Account_Rebrand__c.field-meta.xml
<CustomField>
    <fullName>Account_Rebrand__c</fullName>
    <label>Account Rebrand</label>
    <length>65</length>
    <type>Text</type>
</CustomField>