unpackaged/main/default/objects/Account/fields/Admin_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Admin_Custom_Field__c</fullName>
    <label>Admin Custom Field</label>
    <length>15</length>
    <type>Text</type>
</CustomField>