unpackaged/main/default/objects/Account/fields/advance_field__c.field-meta.xml
<CustomField>
    <fullName>advance_field__c</fullName>
    <label>advance field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>