unpackaged/main/default/objects/Account/fields/Assigned_AE__c.field-meta.xml
<CustomField>
    <fullName>Assigned_AE__c</fullName>
    <label>Assigned AE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>