unpackaged/main/default/objects/Account/fields/Assigned_SE__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SE__c</fullName>
    <label>Assigned SE</label>
    <length>15</length>
    <type>Text</type>
</CustomField>