unpackaged/main/default/objects/Account/fields/Associated_Email__c.field-meta.xml
<CustomField>
    <fullName>Associated_Email__c</fullName>
    <label>Associated Email</label>
    <length>25</length>
    <type>Text</type>
</CustomField>