unpackaged/main/default/objects/Account/fields/Associated_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Associated_Parent_Account__c</fullName>
    <label>Associated Parent Account</label>
    <length>55</length>
    <type>Text</type>
</CustomField>