unpackaged/main/default/objects/Account/fields/At_Risk_Reason_Account__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Reason_Account__c</fullName>
    <label>At Risk Reason Account</label>
    <length>235</length>
    <type>Text</type>
</CustomField>