unpackaged/main/default/objects/Account/fields/Billing_Cycle_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_Start_Date__c</fullName>
    <label>Billing Cycle Start Date</label>
    <length>55</length>
    <type>Text</type>
</CustomField>