unpackaged/main/default/objects/Account/fields/Brand_Logo__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo__c</fullName>
    <label>Brand Logo</label>
    <length>45</length>
    <type>Text</type>
</CustomField>