unpackaged/main/default/objects/Account/fields/Brand_New_Feature__c.field-meta.xml
<CustomField>
    <fullName>Brand_New_Feature__c</fullName>
    <label>Brand New Feature</label>
    <length>30</length>
    <type>Text</type>
</CustomField>