unpackaged/main/default/objects/Account/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <label>Branding</label>
    <length>45</length>
    <type>Text</type>
</CustomField>