unpackaged/main/default/objects/Account/fields/Branding_Layout__c.field-meta.xml
<CustomField>
    <fullName>Branding_Layout__c</fullName>
    <label>Branding Layout</label>
    <length>40</length>
    <type>Text</type>
</CustomField>