unpackaged/main/default/objects/Account/fields/Buying_Committee_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Buying_Committee_Maturity__c</fullName>
    <label>Buying Committee Maturity</label>
    <length>35</length>
    <type>Text</type>
</CustomField>