unpackaged/main/default/objects/Account/fields/Case_Field_Update__c.field-meta.xml
<CustomField>
    <fullName>Case_Field_Update__c</fullName>
    <label>Case Field Update</label>
    <length>15</length>
    <type>Text</type>
</CustomField>