unpackaged/main/default/objects/Account/fields/Catering_Approved__c.field-meta.xml
<CustomField>
    <fullName>Catering_Approved__c</fullName>
    <label>Catering Approved?</label>
    <length>16</length>
    <type>Text</type>
</CustomField>