unpackaged/main/default/objects/Account/fields/Churn_Risk_Identified_MV__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Identified_MV__c</fullName>
    <label>Churn Risk Identified MV</label>
    <length>56</length>
    <type>Text</type>
</CustomField>