unpackaged/main/default/objects/Account/fields/Client_Approval__c.field-meta.xml
<CustomField>
    <fullName>Client_Approval__c</fullName>
    <label>Client Approval</label>
    <length>12</length>
    <type>Text</type>
</CustomField>