unpackaged/main/default/objects/Account/fields/CPQ_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Custom_Field__c</fullName>
    <label>CPQ Custom Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>