unpackaged/main/default/objects/Account/fields/CPQ_Deployment__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Deployment__c</fullName>
    <label>CPQ Deployment</label>
    <length>15</length>
    <type>Text</type>
</CustomField>