unpackaged/main/default/objects/Account/fields/CPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Product__c</fullName>
    <label>CPQ Product</label>
    <length>25</length>
    <type>Text</type>
</CustomField>