unpackaged/main/default/objects/Account/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>22</length>
    <type>Text</type>
</CustomField>