unpackaged/main/default/objects/Account/fields/Current_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Customer</label>
    <type>Checkbox</type>
</CustomField>