unpackaged/main/default/objects/Account/fields/Current_SE__c.field-meta.xml
<CustomField>
    <fullName>Current_SE__c</fullName>
    <label>Current SE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>