unpackaged/main/default/objects/Account/fields/Custom_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Custom_Eligibility__c</fullName>
    <label>Custom Eligibility</label>
    <length>15</length>
    <type>Text</type>
</CustomField>