unpackaged/main/default/objects/Account/fields/Custom_Field_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Accounting__c</fullName>
    <label>Custom Field Accounting</label>
    <length>55</length>
    <type>Text</type>
</CustomField>