unpackaged/main/default/objects/Account/fields/Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label__c</fullName>
    <label>Custom Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>