unpackaged/main/default/objects/Account/fields/Custom_Report__c.field-meta.xml
<CustomField>
    <fullName>Custom_Report__c</fullName>
    <label>Custom Report</label>
    <length>56</length>
    <type>Text</type>
</CustomField>