unpackaged/main/default/objects/Account/fields/Customer_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Tier__c</fullName>
    <label>Customer Account Tier</label>
    <length>67</length>
    <type>Text</type>
</CustomField>