unpackaged/main/default/objects/Account/fields/Customer_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Customer_Go_Live__c</fullName>
    <label>Customer Go Live</label>
    <length>27</length>
    <type>Text</type>
</CustomField>