unpackaged/main/default/objects/Account/fields/Customer_Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Score__c</fullName>
    <label>Customer Satisfaction Score</label>
    <length>55</length>
    <type>Text</type>
</CustomField>