unpackaged/main/default/objects/Account/fields/Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Manager__c</fullName>
    <label>Customer Success Manager</label>
    <length>55</length>
    <type>Text</type>
</CustomField>