unpackaged/main/default/objects/Account/fields/Customer_Tier_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier_Picklist__c</fullName>
    <label>Customer Tier Picklist</label>
    <length>56</length>
    <type>Text</type>
</CustomField>