unpackaged/main/default/objects/Account/fields/Date_of_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Signoff__c</fullName>
    <label>Date of Signoff</label>
    <type>Date</type>
</CustomField>