unpackaged/main/default/objects/Account/fields/Deal_Format__c.field-meta.xml
<CustomField>
    <fullName>Deal_Format__c</fullName>
    <label>Deal Format</label>
    <length>30</length>
    <type>Text</type>
</CustomField>