unpackaged/main/default/objects/Account/fields/Deprecated_Field__c.field-meta.xml
<CustomField>
    <fullName>Deprecated_Field__c</fullName>
    <label>Deprecated Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>