unpackaged/main/default/objects/Account/fields/Economic_Status__c.field-meta.xml
<CustomField>
    <fullName>Economic_Status__c</fullName>
    <label>Economic Status</label>
    <length>65</length>
    <type>Text</type>
</CustomField>