unpackaged/main/default/objects/Account/fields/Eligible_Account__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Account__c</fullName>
    <label>Eligible Account?</label>
    <length>15</length>
    <type>Text</type>
</CustomField>