unpackaged/main/default/objects/Account/fields/Eligible_for_Advanced_Discounting__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Advanced_Discounting__c</fullName>
    <label>Eligible for Advanced Discounting</label>
    <length>67</length>
    <type>Text</type>
</CustomField>