unpackaged/main/default/objects/Account/fields/Enhanced_Automation__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Automation__c</fullName>
    <label>Enhanced Automation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>