unpackaged/main/default/objects/Account/fields/Enhanced_Visibility_Field__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Visibility_Field__c</fullName>
    <label>Enhanced Visibility Field</label>
    <length>25</length>
    <type>Text</type>
</CustomField>