unpackaged/main/default/objects/Account/fields/Event_Logged__c.field-meta.xml
<CustomField>
    <fullName>Event_Logged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Logged</label>
    <type>Checkbox</type>
</CustomField>