unpackaged/main/default/objects/Account/fields/Expansion_Business__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expansion Business</label>
    <type>Checkbox</type>
</CustomField>