unpackaged/main/default/objects/Account/fields/Feature_Flag__c.field-meta.xml
<CustomField>
    <fullName>Feature_Flag__c</fullName>
    <label>Feature Flag</label>
    <length>15</length>
    <type>Text</type>
</CustomField>