unpackaged/main/default/objects/Account/fields/Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Formula_Field__c</fullName>
    <label>Formula Field</label>
    <length>45</length>
    <type>Text</type>
</CustomField>