unpackaged/main/default/objects/Account/fields/Gearset_POC_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Gearset_POC_Test_Field__c</fullName>
    <label>Gearset POC Test Field</label>
    <length>56</length>
    <type>Text</type>
</CustomField>