unpackaged/main/default/objects/Account/fields/Gearset_Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Team_Email__c</fullName>
    <description>Email information of Primary Gearset Account Owner</description>
    <label>Gearset Team Email</label>
    <type>Email</type>
</CustomField>