unpackaged/main/default/objects/Account/fields/Healthcare_Industry__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Industry__c</fullName>
    <label>Healthcare Industry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>