unpackaged/main/default/objects/Account/fields/High_Security_Risk__c.field-meta.xml
<CustomField>
    <fullName>High_Security_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Security Risk</label>
    <type>Checkbox</type>
</CustomField>