unpackaged/main/default/objects/Account/fields/Historical_Account__c.field-meta.xml
<CustomField>
    <fullName>Historical_Account__c</fullName>
    <label>Historical Account</label>
    <length>55</length>
    <type>Text</type>
</CustomField>