unpackaged/main/default/objects/Account/fields/Identified_Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Identified_Churn_Risk__c</fullName>
    <label>Identified Churn Risk?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>