unpackaged/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>