unpackaged/main/default/objects/Account/fields/Industry_access__c.field-meta.xml
<CustomField>
    <fullName>Industry_access__c</fullName>
    <label>Industry access</label>
    <length>30</length>
    <type>Text</type>
</CustomField>