unpackaged/main/default/objects/Account/fields/Industry_Management__c.field-meta.xml
<CustomField>
    <fullName>Industry_Management__c</fullName>
    <label>Industry Management</label>
    <length>45</length>
    <type>Text</type>
</CustomField>