unpackaged/main/default/objects/Account/fields/Integrated__c.field-meta.xml
<CustomField>
    <fullName>Integrated__c</fullName>
    <label>Integrated</label>
    <length>25</length>
    <type>Text</type>
</CustomField>