unpackaged/main/default/objects/Account/fields/Interest_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Interest_Percentage__c</fullName>
    <label>Interest Percentage</label>
    <length>25</length>
    <type>Text</type>
</CustomField>