unpackaged/main/default/objects/Account/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <length>40</length>
    <type>Text</type>
</CustomField>