unpackaged/main/default/objects/Account/fields/Jurisdiction_Level__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_Level__c</fullName>
    <label>Jurisdiction Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>npsp__Payment_ACH_Code</valueSetName>
    </valueSet>
</CustomField>