unpackaged/main/default/objects/Account/fields/Layout_View__c.field-meta.xml
<CustomField>
    <fullName>Layout_View__c</fullName>
    <label>Layout View</label>
    <length>20</length>
    <type>Text</type>
</CustomField>