unpackaged/main/default/objects/Account/fields/Lead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes__c</fullName>
    <label>Lead Notes</label>
    <length>45</length>
    <type>Text</type>
</CustomField>