unpackaged/main/default/objects/Account/fields/Legacy_ERP__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ERP__c</fullName>
    <label>Legacy ERP</label>
    <length>67</length>
    <type>Text</type>
</CustomField>