unpackaged/main/default/objects/Account/fields/Legislative_District__c.field-meta.xml
<CustomField>
    <fullName>Legislative_District__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legislative District</label>
    <type>Checkbox</type>
</CustomField>