unpackaged/main/default/objects/Account/fields/Lifeway_Custom_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Lifeway_Custom_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lifeway Custom Checkbox</label>
    <type>Checkbox</type>
</CustomField>