unpackaged/main/default/objects/Account/fields/Local_Account__c.field-meta.xml
<CustomField>
    <fullName>Local_Account__c</fullName>
    <label>Local Account</label>
    <length>56</length>
    <type>Text</type>
</CustomField>