unpackaged/main/default/objects/Account/fields/Location_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>Location_Dynamic__c</fullName>
    <description>test</description>
    <label>Location Dynamic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>