unpackaged/main/default/objects/Account/fields/Marketing_Attribution_Score__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Attribution_Score__c</fullName>
    <label>Marketing Attribution Score</label>
    <length>89</length>
    <type>Text</type>
</CustomField>