unpackaged/main/default/objects/Account/fields/Max_Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Max_Custom_Field__c</fullName>
    <label>Max Custom Field</label>
    <length>10</length>
    <type>Text</type>
</CustomField>