unpackaged/main/default/objects/Account/fields/Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Revenue__c</fullName>
    <label>Net Revenue</label>
    <length>30</length>
    <type>Text</type>
</CustomField>