unpackaged/main/default/objects/Account/fields/New_Branding_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Branding_Field__c</fullName>
    <label>New Branding Field</label>
    <length>56</length>
    <type>Text</type>
</CustomField>