unpackaged/main/default/objects/Account/fields/New_Logo__c.field-meta.xml
<CustomField>
    <fullName>New_Logo__c</fullName>
    <label>New Logo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>