unpackaged/main/default/objects/Account/fields/Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date__c</fullName>
    <label>Next Renewal Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>