unpackaged/main/default/objects/Account/fields/Order_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Order_Form_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test</description>
    <label>Order Form Signed</label>
    <type>Checkbox</type>
</CustomField>