unpackaged/main/default/objects/Account/fields/Owned__c.field-meta.xml
<CustomField>
    <fullName>Owned__c</fullName>
    <label>Owned?</label>
    <length>15</length>
    <type>Text</type>
</CustomField>