unpackaged/main/default/objects/Account/fields/Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout__c</fullName>
    <label>Page Layout</label>
    <length>35</length>
    <type>Text</type>
</CustomField>