unpackaged/main/default/objects/Account/fields/Parent_Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Field__c</fullName>
    <label>Parent Account Field</label>
    <length>15</length>
    <type>Text</type>
</CustomField>