unpackaged/main/default/objects/Account/fields/Partner_Management__c.field-meta.xml
<CustomField>
    <fullName>Partner_Management__c</fullName>
    <label>Partner Management</label>
    <length>56</length>
    <type>Text</type>
</CustomField>