unpackaged/main/default/objects/Account/fields/Payment_Wizard_Accepte__c.field-meta.xml
<CustomField>
    <fullName>Payment_Wizard_Accepte__c</fullName>
    <label>Payment Wizard Accepte</label>
    <length>67</length>
    <type>Text</type>
</CustomField>