unpackaged/main/default/objects/Account/fields/Personal_Account_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Personal_Account_Indicator__c</fullName>
    <label>Personal Account Indicator</label>
    <length>25</length>
    <type>Text</type>
</CustomField>