unpackaged/main/default/objects/Account/fields/Preferred_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication_Method__c</fullName>
    <label>Preferred Communication Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>