unpackaged/main/default/objects/Account/fields/Premium_Onboarding_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Premium_Onboarding_Candidate__c</fullName>
    <label>Premium Onboarding Candidate?</label>
    <length>45</length>
    <type>Text</type>
</CustomField>