unpackaged/main/default/objects/Account/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <label>Pricing Tier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>