unpackaged/main/default/objects/Account/fields/Production_ID__c.field-meta.xml
<CustomField>
    <fullName>Production_ID__c</fullName>
    <label>Production ID</label>
    <length>78</length>
    <type>Text</type>
</CustomField>