unpackaged/main/default/objects/Account/fields/Purchase_Order_Signed__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Signed__c</fullName>
    <label>Purchase Order Signed?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>