unpackaged/main/default/objects/Account/fields/Purchasing_agreement_signed__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_agreement_signed__c</fullName>
    <label>Purchasing agreement signed</label>
    <length>45</length>
    <type>Text</type>
</CustomField>