unpackaged/main/default/objects/Account/fields/Qualified_Lead__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified Lead</label>
    <type>Checkbox</type>
</CustomField>