unpackaged/main/default/objects/Account/fields/Quarterly_Billing__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Billing__c</fullName>
    <label>Quarterly Billing</label>
    <length>45</length>
    <type>Text</type>
</CustomField>