unpackaged/main/default/objects/Account/fields/Quote_Discount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Discount__c</fullName>
    <label>Quote Discount</label>
    <length>15</length>
    <type>Text</type>
</CustomField>