unpackaged/main/default/objects/Account/fields/Random_Field__c.field-meta.xml
<CustomField>
    <fullName>Random_Field__c</fullName>
    <label>Random Field</label>
    <length>25</length>
    <type>Text</type>
</CustomField>