unpackaged/main/default/objects/Account/fields/Rejected_Business__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Business__c</fullName>
    <label>Rejected Business</label>
    <length>25</length>
    <type>Text</type>
</CustomField>