unpackaged/main/default/objects/Account/fields/Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field__c</fullName>
    <label>Salesforce Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>