unpackaged/main/default/objects/Account/fields/Salesforce_UI_Config_Change__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_UI_Config_Change__c</fullName>
    <label>Salesforce UI Config Change</label>
    <length>55</length>
    <type>Text</type>
</CustomField>