unpackaged/main/default/objects/Account/fields/Service_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Number__c</fullName>
    <label>Service Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>