unpackaged/main/default/objects/Account/fields/Sign_on_Date__c.field-meta.xml
<CustomField>
    <fullName>Sign_on_Date__c</fullName>
    <description>test</description>
    <label>Sign on Date</label>
    <type>Date</type>
</CustomField>