unpackaged/main/default/objects/Account/fields/SLA_Level__c.field-meta.xml
<CustomField>
    <fullName>SLA_Level__c</fullName>
    <label>SLA Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>