unpackaged/main/default/objects/Account/fields/SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SLASerialNumber__c</fullName>
    <description>Capture the 20 digits long serial number for the user's SLA</description>
    <label>SLA Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>