unpackaged/main/default/objects/Account/fields/Social_Security_Digits__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Digits__c</fullName>
    <label>Social Security Digits</label>
    <length>45</length>
    <type>Text</type>
</CustomField>