unpackaged/main/default/objects/Account/fields/State_of_Account__c.field-meta.xml
<CustomField>
    <fullName>State_of_Account__c</fullName>
    <label>State of Account</label>
    <length>56</length>
    <type>Text</type>
</CustomField>