unpackaged/main/default/objects/Account/fields/Status_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Status_Tracking__c</fullName>
    <label>Status Tracking</label>
    <length>25</length>
    <type>Text</type>
</CustomField>