unpackaged/main/default/objects/Account/fields/Team_Shared_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Team_Shared_Pipeline__c</fullName>
    <label>Team Shared Pipeline?</label>
    <length>67</length>
    <type>Text</type>
</CustomField>