unpackaged/main/default/objects/Account/fields/Tier_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Tier_Picklist__c</fullName>
    <label>Tier Picklist</label>
    <length>34</length>
    <type>Text</type>
</CustomField>