unpackaged/main/default/objects/Account/fields/Total_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Total_Earnings__c</fullName>
    <label>Total Earnings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>