unpackaged/main/default/objects/Account/fields/UMortgage_Client__c.field-meta.xml
<CustomField>
    <fullName>UMortgage_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UMortgage Client</label>
    <type>Checkbox</type>
</CustomField>