unpackaged/main/default/objects/Account/fields/Update_Contact_Layout__c.field-meta.xml
<CustomField>
    <fullName>Update_Contact_Layout__c</fullName>
    <label>Update Contact Layout</label>
    <length>58</length>
    <type>Text</type>
</CustomField>