unpackaged/main/default/objects/Account/fields/Update_Field__c.field-meta.xml
<CustomField>
    <fullName>Update_Field__c</fullName>
    <label>Update Field</label>
    <length>25</length>
    <type>Text</type>
</CustomField>