unpackaged/main/default/objects/Account/fields/Valid_Account__c.field-meta.xml
<CustomField>
    <fullName>Valid_Account__c</fullName>
    <label>Valid Account</label>
    <length>77</length>
    <type>Text</type>
</CustomField>