unpackaged/main/default/objects/Account/fields/Verified_Lead_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Verified_Lead_Qualification__c</fullName>
    <label>Verified Lead Qualification</label>
    <length>35</length>
    <type>Text</type>
</CustomField>