unpackaged/main/default/objects/Account/fields/Volatility_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Volatility_Percentage__c</fullName>
    <label>Volatility Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>